package kr.co.hs.sudoku.core

interface Coordinate<T> {
    val x: T
    val y: T
}